--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Task 3 COMMAND LINE. DEBUGGING. ERROR HANDLING / FILE SYSTEM AND STREAMS",
+  "name": "Task3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
