implement all cmd tasks with minimist (without actions)

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "nodemon": "1.17.5"
   },
   "dependencies": {
-    "commander": "2.15.1",
-    "csvjson": "5.0.0"
+    "csvjson": "5.0.0",
+    "minimist": "^1.2.0"
   }
 }
