--- a/task4/package.json
+++ b/task4/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "4.16.3",
     "jsonwebtoken": "8.3.0",
-    "lodash": "4.17.10"
+    "lodash": "4.17.10",
+    "passport": "0.4.0"
   }
 }
