--- a/tasks4.5.6/package.json
+++ b/tasks4.5.6/package.json
@@ -18,6 +18,9 @@
     "express": "4.16.3",
     "jsonwebtoken": "8.3.0",
     "lodash": "4.17.10",
-    "passport": "0.4.0"
+    "passport": "0.4.0",
+    "pg": "^7.4.3",
+    "sequelize": "^4.38.0",
+    "sequelize-cli": "^4.0.0"
   }
 }
