--- a/task4.5.7/package.json
+++ b/task4.5.7/package.json
@@ -18,6 +18,7 @@
     "express": "4.16.3",
     "jsonwebtoken": "8.3.0",
     "lodash": "4.17.10",
+    "mongoose": "5.2.1",
     "passport": "0.4.0"
   }
 }
