--- a/task4.5.7/package.json
+++ b/task4.5.7/package.json
@@ -11,8 +11,11 @@
   "devDependencies": {
     "eslint": "4.19.1",
     "eslint-config-airbnb-base": "12.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "2.12.0",
-    "nodemon": "1.17.5"
+    "eslint-plugin-prettier": "^2.6.2",
+    "nodemon": "1.17.5",
+    "prettier": "^1.14.0"
   },
   "dependencies": {
     "express": "4.16.3",
